# fritz_box_tr064_igd_api_files_generator

./: Cargo.toml  README.md
src/: main.rs
src/api_handling/: api_desc.rs  api_desc_dir.rs  helper.rs  mod.rs
templates/: action_response_types.rs  mod.rs  multi_use.rs  request_function.rs
